@@ -97,7 +97,8 @@
 	<attribute name="standard_name" value="lwe_thickness_of_surface_snow_amount" type="string" />
 	<attribute name="units" value="m" type="string" />
 </parameter>
-<parameter id="83,2,1000" name="surface_roughness_length">
+<parameter id="83,2,1000" name="surface_roughness_length" type="float">
+	<attribute name="_FillValue" value="9.9692099683868690e+36f" type="float" />
 	<attribute name="long_name" value="surface_roughness_length" type="string" />
 	<attribute name="standard_name" value="surface_roughness_length" type="string" />
 	<attribute name="units" value="m" type="string" />
