@@ -3,3 +3,4 @@ Makefile
 .deps
 .libs
 fimex
+gmon.out
